# libpiga

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
client/: CMakeLists.txt
client/src/: client.c  client_config.c
cmake/: PigaConfig.cmake.in
common/: CMakeLists.txt
common/src/: config.c  event.c  event_app_installed.c  event_consumer_registered.c  event_consumer_unregistered.c  event_game_input.c  event_player_joined.c  event_player_left.c  event_plugin_msg.c  event_queue.c  event_request_keyboard.c  event_request_restart.c  event_text_input.c  event_text_input_queue.c  player.c  player_inputs.c  player_role.c  player_status.c  shared_memory.c  status.c
include/piga/: client.h  client_config.h  clients_map.h  config.h.in  event.h  event_app_installed.h  event_consumer_registered.h  event_consumer_unregistered.h  event_game_input.h  event_player_joined.h  event_player_left.h  event_plugin_msg.h  event_queue.h  event_request_keyboard.h  event_request_restart.h  event_text_input.h  event_text_input_queue.h  host.h  host_config.h  player.h  player_inputs.h  player_role.h  player_status.h  shared_memory.h  status.h
include/piga/internal/: piga_event_app_installed_struct.h  piga_event_consumer_registered_struct.h  piga_event_consumer_unregistered_struct.h  piga_event_game_input_struct.h  piga_event_player_joined_struct.h  piga_event_player_left_struct.h  piga_event_plugin_msg_struct.h  piga_event_queue_struct.h  piga_event_request_keyboard_struct.h  piga_event_request_restart_struct.h  piga_event_struct.h  piga_event_text_input_queue_struct.h  piga_event_text_input_struct.h  piga_player_inputs_struct.h  piga_player_struct.h
server/: CMakeLists.txt
server/src/: clients_map.c  host.c  host_config.c
swig/: piga_client.i  piga_common.i  piga_server.i
test/: host_and_client.cpp  host_create.cpp  reliability_10000.cpp  type_mask.cpp
